# cmEngine

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  cmEngine.sln  cmEngine.snippet
CommonResource/: ChatGPT.html
CommonResource/ChatGPT_files/: saved_resource.html
CommonResource/Shader/: 1. SimpleColorShader.hlsli  2. SimpleTexShader.hlsli  3. SimpleTexSpriteShader.hlsli
DemoGame/: DemoGame.vcxproj  DemoGame.vcxproj.filters  DemoScene.cpp  DemoScene.h  EntryPoint.cpp  Game.cpp  Game.h  LogConfig.json  RendererConfig.json  SystemConfig.json  WindowConfig.json  imgui.ini  pch.h
DemoGame/Config/: RendererConfig.json  SystemConfig.json  WindowConfig.json
DemoGame/json/: EditorConfig.json  EngineConfig.json
Inter/Debug/: cmEditor.exe.recipe  cmEditor.ilk.REMOVED.git-id  menupanel.obj.enc  unity_JJGKJ86UI67CZL5Y.cpp  vc143.idb
Libraries/DirectXTex/: DirectXTex.lib
Libraries/ImGui/: ImGui.vcxproj  ImGui.vcxproj.filters  imgui.cpp  imgui_impl_win32.cpp
Libraries/Imgui/: imgui_widgets.cpp
Sample/: App.cpp  App.h  Sample.vcxproj  Sample.vcxproj.filters  imgui.ini  main.cpp  pch.h
Test/: Test.vcxproj  main.cpp
TestClient/: CameraGUI.cpp  CameraGUI.h  CameraScript.cpp  CameraScript.h  Demo.cpp  Demo.h  DummyScene.cpp  DummyScene.h  DummyScript.cpp  DummyScript.h  Main.cpp  PlayerGUI.cpp  PlayerGUI.h  TestClient.vcxproj  TestClient.vcxproj.filters  imgui.ini  pch.h
TestClient/Debug/: vc143.idb
TestClient/Inter/: CodeAnalysisResultManifest.txt  Demo.h_67C966C713BC8C07.ifc.dt.command  Demo.h_67C966C713BC8C07.ifc.dt.d.json  Demo.h_67C966C713BC8C07.ifc.dt.module.json  Demo.h_67C966C713BC8C07.ifc.dt.module.json.command  DummyScene.h_41BEF1D92BE1AD58.ifc.dt.command  DummyScene.h_41BEF1D92BE1AD58.ifc.dt.d.json  DummyScene.h_41BEF1D92BE1AD58.ifc.dt.module.json  DummyScene.h_41BEF1D92BE1AD58.ifc.dt.module.json.command  EngineInc.h_EF8899AECAC3D707.ifc.dt.command  EngineInc.h_EF8899AECAC3D707.ifc.dt.d.json  EngineInc.h_EF8899AECAC3D707.ifc.dt.module.json  EngineInc.h_EF8899AECAC3D707.ifc.dt.module.json.command  EngineModules.h_66FFA7D76D259082.ifc.dt.command  EngineModules.h_66FFA7D76D259082.ifc.dt.d.json  EngineModules.h_66FFA7D76D259082.ifc.dt.module.json  EngineModules.h_66FFA7D76D259082.ifc.dt.module.json.command  TestClient.exe.recipe  cmGUIRenderer.h_C21A6DE1F1618F39.ifc.dt.command  cmGUIRenderer.h_C21A6DE1F1618F39.ifc.dt.d.json  cmGUIRenderer.h_C21A6DE1F1618F39.ifc.dt.module.json  cmGUIRenderer.h_C21A6DE1F1618F39.ifc.dt.module.json.command  cmSceneManager.h_F6982EAC0D71F7C4.ifc.dt.command  cmSceneManager.h_F6982EAC0D71F7C4.ifc.dt.d.json  cmSceneManager.h_F6982EAC0D71F7C4.ifc.dt.module.json  cmSceneManager.h_F6982EAC0D71F7C4.ifc.dt.module.json.command  cmWindow.h_649149C931E1AA93.ifc.dt.command  cmWindow.h_649149C931E1AA93.ifc.dt.d.json  cmWindow.h_649149C931E1AA93.ifc.dt.module.json  cmWindow.h_649149C931E1AA93.ifc.dt.module.json.command  dummyscript.obj.enc  pch.h_E8FB555B47C526FF.ifc.dt.command  pch.h_E8FB555B47C526FF.ifc.dt.d.json  pch.h_E8FB555B47C526FF.ifc.dt.module.json  pch.h_E8FB555B47C526FF.ifc.dt.module.json.command  pch.nativecodeanalysis.sarif  unity_S7QRN43BEQ06RZGK.cpp  unity_S7QRN43BEQ06RZGK.nativecodeanalysis.sarif  unity_WIEDK17JOL7BGQ4P.cpp  unity_ZF4N846DJ8K3P53T.cpp  (+1 more)
TestConsole/: Console.cpp  Console.h  JsonTest.json  Test.json  TestConsole.cpp  TestConsole.vcxproj  TestConsole.vcxproj.filters  snapshot.json
cmEditor/: cmEditor.vcxproj  cmEditor.vcxproj.filters  imgui.ini
cmEditor/0. cmEditor/: cmEditor.cpp  cmEditor.h
cmEditor/1. EditorApp/: EditorApp.cpp  EditorApp.h  EditorAppConfig.h  EntryPoint.cpp
cmEditor/2. Editor/: EditorCore.cpp  EditorCore.h
cmEditor/5. GuiHelper/: ImFileDialog.h  ImFlag.h  ImHelper.h  ImModal.h  ImOp.h  ImPayload.h  ImText.h
cmEditor/Json/: EditorPanelConfig.json  EngineConfig.json
cmEditor/Scenes/: EditorScene.json
cmEngine/: Application.cpp  Application.h  BatchSystem.cpp  BatchSystem.h  Behavior.cpp  Behavior.h  BehaviorSystem.cpp  BehaviorSystem.h  Camera.h  CameraComponent.cpp  CameraComponent.h  CameraScript.cpp  CameraScript.h  Colors.cpp  Colors.h  Component.cpp  Component.h  ConfigBase.h  ConfigEngine.cpp  ConfigEngine.h  ConfigSystem.h  ConstantBuffer.h  ConstantBufferBase.cpp  ConstantBufferBase.h  ConstantBufferData.cpp  ConstantBufferData.h  ConstantBufferPool.cpp  ConstantBufferPool.h  Editor.cpp  Editor.h  EditorComponent.cpp  EditorComponent.h  EditorDebugViewer.cpp  EditorDebugViewer.h  EditorLogViewer.cpp  EditorLogViewer.h  EditorOverlay.cpp  EditorOverlay.h  EditorSceneViewer.cpp  EditorSceneViewer.h  (+324 more)
cmEngine/0. cmEngine/: cmEngine.cpp  cmEngine.h
cmEngine/1. Application/: Application.cpp  Application.h
cmEngine/10. Scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneSerializer.cpp  SceneSerializer.h  ScriptStack.cpp  ScriptStack.h
cmEngine/11. GameEntity/: GameEntity.cpp  GameEntity.h
cmEngine/12. Component/: Behavior.cpp  Camera.cpp  Camera.h  InputController.cpp  Name.cpp  Name.h  RenderComponent.cpp  RenderComponent.h  Transform.cpp  Transform.h
cmEngine/13. Script/: InputControllerScript.cpp  InputControllerScript.h  RenderScript.cpp  RenderScript.h  UserScript.cpp  UserScript.h
cmEngine/2. Engine/: EngineCore.cpp  EngineCore.h
cmEngine/3. Event/: EventDispatcher.cpp  EventDispatcher.h  GameEvent.cpp  GameEvent.h
cmEngine/3. Window/: GameWindow.cpp  GameWindow.h  WindowProc.cpp  WindowProc.h
cmEngine/4. Input/: Input.cpp  Input.h
cmEngine/5. Timer/: Timer.cpp  Timer.h
cmEngine/7. Gui/: Gui.cpp  Gui.h  GuiRenderer.cpp  GuiRenderer.h
cmEngine/9. Resource/: EngineResource.h
cmEngine/95. Editor (ToDo Delect)/: Editor.cpp  EditorBrowser.cpp  EditorBrowser.h  EditorDebugViewer.cpp  EditorDebugViewer.h  EditorLogViewer.cpp  EditorLogViewer.h  EditorOverlay.cpp  EditorOverlay.h  EditorResourceViewer.cpp  EditorResourceViewer.h  EditorSceneViewer.cpp  EditorSceneViewer.h  EditorVoidPopup.cpp  EditorVoidPopup.h
cmEngine/96. JsonSerializer/: JsonHelper.cpp  JsonHelper.h  JsonSerializer.cpp  JsonSerializer.h
cmEngine/98. Log/: Log.cpp  (+1 more)
(+398 files in other folders)
